# Regime-Aware-Systematic-Equities-Trading-Platform

./: .gitignore  README.md  pyproject.toml
analytics/: __init__.py  attribution.py  benchmarking.py  correlation.py  cost_sensitivity.py  factor_exposure.py  html_report.py  metrics.py  portfolio_diagnostics.py  regime_analysis.py  tearsheet.py
backtesting/: __init__.py  engine.py  walk_forward.py
configs/: __init__.py  default.yaml  loader.py  strategy_universe.yaml
data/: __init__.py  features.py  ingestion.py  models.py  validation.py
execution/: README.md  __init__.py  simulator.py
notebooks/: README.md
portfolio/: __init__.py  allocation.py
regime_detection/: __init__.py  base.py  ensemble.py  hmm.py  macro.py  volatility.py
research/: README.md  __init__.py  experiment_tracker.py  pipeline.py  robustness.py
risk/: __init__.py  costs.py  management.py
scripts/: run_advanced_diagnostics.py  run_research.py
strategies/: __init__.py  base.py  breakout.py  events.py  library.py  pairs.py  sector_rotation.py  utils.py
strategies/event_driven/: __init__.py  core.py
strategies/mean_reversion/: __init__.py  core.py
strategies/momentum/: __init__.py  core.py
strategies/stat_arb/: __init__.py  core.py
strategies/volatility/: __init__.py  core.py
tests/: conftest.py  test_advanced_analytics.py  test_backtesting_analytics.py  test_execution_research.py  test_regime_portfolio.py  test_strategies.py  test_walkforward_robustness_validation.py
visualization/: __init__.py  plots.py
