[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-aware-systematic-equities"
version = "0.1.0"
description = "Regime-aware multi-strategy systematic equities research platform."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Arnaav Raj" }
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "hmmlearn>=0.3",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "cvxpy>=1.3",
    "yfinance>=0.2",
    "backtesting>=0.3.3",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "black>=24.0",
    "jupyter>=1.0"
]

[tool.setuptools.packages.find]
include = [
    "analytics*",
    "backtesting*",
    "configs*",
    "data*",
    "execution*",
    "portfolio*",
    "regime_detection*",
    "research*",
    "risk*",
    "strategies*",
    "visualization*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
